# practical-pydantic

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
dataclasses/: README.md  dataclass-config.ipynb  dataclasses-basics.ipynb  dataclasses-basics.py  initialize-hooks.ipynb  initialize-hooks.py  json-dumping.ipynb  json-dumping.py  nested-dataclasses.ipynb  nested-dataclasses.py  stdlib-vs-pydantic-dataclasses.ipynb  stdlib-vs-pydantic-dataclasses.py
export-models/: README.md  advanced-include-exclude.ipynb  advanced-include-exclude.py  dict-model-iteration.ipynb  dict-model-iteration.py  model-copy.ipynb  model-copy.py  model-dict.ipynb  model-dict.py  model-json.ipynb  model-json.py  pickle-dumps.ipynb  pickle-dumps.py
field-types/: README.md  annotated-types.ipynb  annotated-types.py  booleans.ipynb  booleans.py  bytesize.ipynb  bytesize.py  callable.ipynb  callable.py  color-type..ipynb  color-type..py  constrained-types.ipynb  constrained-types.py  custom-data-types.ipynb  custom-data-types.py  datetime-types.ipynb  datetime-types.py  enums-and-choices.ipynb  enums-and-choices.py  infinite-generators.ipynb  infinite-generators.py  json-type.ipynb  json-type.py  literal-type.ipynb  literal-type.py  payment-card-numbers.ipynb  payment-card-numbers.py  secret-types.ipynb  secret-types.py  strict-types.ipynb  strict-types.py  type-var.ipynb  type-var.py  type.ipynb  type.py  typing-iterables.ipynb  typing-iterables.py  unions.ipynb  unions.py  urls.ipynb  (+1 more)
model-config/: README.md  alias-generator.ipynb  alias-generator.py  (+8 more)
(+100 files in other folders)
