[tool.poetry]
name = "practical-pydantic"
version = "0.1.0"
description = "Step-by-step procedure to learn to use pydantic"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "practical_pydantic"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
jupyter = "^1.0.0"
sqlalchemy = "^1.4.44"
ujson = "^5.6.0"
orjson = "^3.8.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | venv
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
